--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: Tahoma, sans-serif;
+}
+
+.container  {
+  display: flex; 
+  flex-flow: column wrap;
+  border: 5px solid rgb(24, 129, 170);
+  text-align: center;
+}
+
+.display-box {
+  display: flex; 
+  justify-content: space-evenly
+}
+
+.cell {
+  padding: 4px 4px 4px 4px;
+  border: 1px solid rgb(24, 129, 170);
+}
+
+.graph {
+  display: flex; 
+  align-items: center
 }
